--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/afeiship/react-status-manager",
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "docs": "node build/auto-readme.js"
   },
   "main": "./dist/react-status-manager.js",
   "devDependencies": {
@@ -54,6 +55,7 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "file-regexp": "github:afeiship/file-regexp",
     "function-bind": "^1.0.2",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.8.1",
