--- a/package.json
+++ b/package.json
@@ -85,9 +85,9 @@
     "npm": ">= 3.0.0"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "prop-types": "^15.5.10",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "classnames": "*",
+    "prop-types": "*",
+    "react": "*",
+    "react-dom": "*"
   }
 }
