--- a/package.json
+++ b/package.json
@@ -84,10 +84,12 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
+  "peerDependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
   "dependencies": {
     "classnames": "*",
-    "prop-types": "*",
-    "react": "*",
-    "react-dom": "*"
+    "prop-types": "*"
   }
 }
