--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,17 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "stage-0"
-  ],
+  "presets": ["@babel/preset-env", "@babel/react"],
   "plugins": [
-    "transform-array-from",
-    "transform-class-properties",
-    "transform-es2015-spread",
-    "transform-object-rest-spread",
-    "transform-decorators-legacy"
-  ],
-  "ignore": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    [
+      "@babel/plugin-proposal-class-properties",
+      {
+        "loose": true
+      }
+    ]
   ]
 }
