--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jswork/react-status-manager",
   "description": "React component for status manager.",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -25,5 +25,11 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "keywords": [
+    "react",
+    "refresh",
+    "refresher",
+    "rsm"
+  ]
 }
