--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -14,17 +14,20 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@jswork/react-status-manager": "^1.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.0.2",
+    "postcss": "^8.4.39",
     "sass": "^1.69.5",
-    "vite": "^4.4.5",
-    "@jswork/react-status-manager": "^1.0.0"
+    "tailwindcss": "^3.4.6",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5"
   }
 }
