feat: add nested impl

--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "react-status-manager",
-  "homepage": "https://js.work",
   "version": "1.0.0",
   "description": "React component for status manager.",
+  "homepage": "https://js.work",
+  "type": "module",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "scripts": {
     "dev": "cd packages/example && yarn run dev",
-    "predocs": "rm -rf docs",
+    "predocs": "rm -rf docs && node scripts/markdown.js",
     "docs": "cd packages/example && yarn run build",
     "postdocs": "cp -R packages/example/dist docs",
+    "preln:build": "yarn run docs",
     "ln:build": "cd packages/lib && yarn run build",
     "ln:publish": "cd packages/lib && yarn run release"
   }
