--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -14,19 +14,26 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@jswork/next": "^1.2.2",
+    "@jswork/next-replace-in-file": "^1.0.0",
+    "@jswork/presets-tailwind": "^1.1.8",
     "@jswork/react-status-manager": "^1.0.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@jswork/simple-date-format": "^1.0.5",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.5",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.39",
-    "sass": "^1.69.5",
-    "tailwindcss": "^3.4.6",
+    "indent-string": "^5.0.0",
+    "postcss": "^8.4.38",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "sass": "^1.76.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
